# redrum-ai

./: .env.example  AGENT.md  AI Assistants with Extreme Optimization Strategies for Resource-Constrained x86 Edge Hardware.md  DESCRIPTION.md  PROJECT_PROGRESS.md  README.md  ai_partner.py  index.html  install.sh  manifest.json  memory.db  metadata.json  package.json  pyproject.toml  redrum-ai  server.ts  setup_edge_optimizations.sh  tsconfig.json  typescript
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  DATA_RELIABILITY.md  MODEL_QUALITY.md  PRIVACY_REVIEW.md  PRODUCT_REQUIREMENTS.md  RUNBOOKS.md  SECURITY_REVIEW.md  SECURITY_THREAT_MODEL.md  SUPPORT_POLICY.md  UNINSTALL.md  UX_SPEC.md  VERSIONING.md
src/: App.tsx  global.css
src/redrum_ai/: __init__.py  agent_platform.py  cli.py  collaborate.py  config.py  context.py  contracts.py  database.py  devtools.py  errors.py  hardware.py  logger.py  main.py  migrations.py  model.py  multimodal.py  offline.py  plugin.py  proactive.py  prompt.py  runner.py  security.py  sre.py  system_integration.py  telemetry.py  tools.py  web_access.py
src/redrum_ai.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/redrum_ai/commands/: __init__.py
src/redrum_ai/it_partner/: __init__.py  chaos.py  cicd.py  data_eng.py  enterprise.py  evolution.py  finops.py  hardware.py  hci.py  iac.py  k8s.py  mlops.py  network.py  os_kernel.py  quantum.py  reverse_eng.py  rpa.py  security.py  sre.py  swarm.py  web3.py
src/redrum_memory/: README.md  __init__.py  __main__.py  database.py  engine.py  federation.py  memory_core.py  migrations.py  policy.py  privacy.py  pyproject.toml  service.py
tests/: test_golden.py  test_memory_manual.db  test_property.py  test_regression.py  test_snapshot.py
