[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "redrum-ai"
version = "1.0.0"
description = "A personal AI partner local assistant CLI companion"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Redrum" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Environment :: Console",
    "Development Status :: 5 - Production/Stable",
]
dependencies = [
    "pydantic>=2.0",
    "typing-extensions>=4.0",
    "prompt-toolkit>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "flake8>=6.0",
    "mypy>=1.0",
    "hypothesis>=6.0"
]

[project.urls]
Homepage = "https://github.com/redrum/redrum-ai"
Repository = "https://github.com/redrum/redrum-ai.git"
Issues = "https://github.com/redrum/redrum-ai/issues"

[project.scripts]
redrum-ai = "redrum_ai.main:main_entry"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --cov=src/redrum_ai"
testpaths = [
    "tests",
]
markers = [
    "unit: mark a test as a unit test.",
    "integration: mark test as integration test.",
    "e2e: mark test as end-to-end.",
    "slow: mark test as slow."
]
