[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "redrum-memory"
version = "1.0.0"
description = "Decoupled standalone memory and persistence core for redrum-ai"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = []

[tool.setuptools.packages.find]
where = ["."]
include = ["redrum_memory*"]
